--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "msw": "^2.12.10",
         "react": "^19.2.4",
         "react-dom": "^19.2.4",
-        "react-error-boundary": "^6.1.1",
+        "react-error-boundary": "6.0.3",
         "react-router-dom": "^7.13.0",
         "swr": "^2.4.0",
         "uuid": "^11.1.0",
